--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "tailwindcss": "^3.3.3"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@types/react": "^18.2.15",
         "@types/react-animate-on-scroll": "^2.1.5",
         "@types/react-dom": "^18.2.7",
