--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
         "@types/react-dom": "^18.2.7",
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
+        "autoprefixer": "^10.4.14",
         "eslint": "^8.45.0",
         "eslint-import-resolver-typescript": "^3.5.5",
         "eslint-plugin-import": "^2.27.5",
+        "postcss": "^8.4.26",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.1.6"
     },
